--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
     "name": "ShareLoc_API",
     "private": true,
-    "version": "0.0.0",
+    "version": "0.0.0-4",
     "description": "a Sails application",
     "dependencies": {
         "sails": "0.9.16",
         "grunt": "0.4.1",
         "sails-disk": "~0.9.0",
         "ejs": "0.8.4",
-        "optimist": "0.3.4"
+        "optimist": "0.3.4",
+        "sails-mongo": "0.9.8",
+        "passport": "0.2.0",
+        "passport-facebook": "1.0.3"
     },
     "scripts": {
         "start": "node app.js",
@@ -17,5 +20,9 @@
     "main": "app.js",
     "repository": "",
     "author": "",
-    "license": ""
+    "license": "",
+    "subdomain": "ShareLoc_API",
+    "engines": {
+        "node": "0.10.x"
+    }
 }
