--- a/assets/shareloc/bower.json
+++ b/assets/shareloc/bower.json
@@ -9,9 +9,12 @@
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
+    "angular-touch": "1.2.15",
+    "angular-gestures":"0.2.2",
     "pure":"0.4.2",
     "gmaps":"0.4.11",
-    "jquery":"2.1.0"
+    "jquery":"2.1.0",
+    "lodash":"2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
